Update about hero image and product layout

--- a/src/_includes/layouts/about.html
+++ b/src/_includes/layouts/about.html
@@ -23,7 +23,7 @@
     image: '/images/whyl3/whyl3-how.png'
   }
 ] %}
-{% set heroImage = '/images/products/cyber-security.webp' %}
+{% set heroImage = '/images/aboutushero.png' %}
 {% set faqGroups = [
   {
     title: 'Cost & Engagement',
@@ -74,7 +74,7 @@
   }
 ] %}
 
-<section class="yl3-hero yl3-hero--solutions" style="background-image:url('{{ heroImage }}');">
+<section class="yl3-hero yl3-hero--solutions" style="background-image:url('{{ heroImage }}');background-position:center 20%;">
   <div class="yl3-hero__overlay" aria-hidden="true"></div>
   <div class="yl3-hero__inner">
     <h1>Why L3 Networks?</h1>
@@ -275,7 +275,7 @@
   .yl3-hero__overlay{
     position:absolute;
     inset:0;
-    background:linear-gradient(180deg, rgba(0,0,0,.78) 0%, rgba(0,0,0,.6) 45%, rgba(0,0,0,.9) 100%);
+    background:linear-gradient(180deg, rgba(0,0,0,.82) 0%, rgba(0,0,0,.72) 45%, rgba(0,0,0,.92) 100%);
   }
   .yl3-hero__inner{
     position:relative;
