--- a/src/_includes/layouts/aboutus.html
+++ b/src/_includes/layouts/aboutus.html
@@ -2,7 +2,7 @@
 {% block content %}
 
   <!-- Hero Section -->
-  <article style="background-image: url('/images/aboutus-hero.jpg'); background-position:50% 0%;" class="aboutHero relative py-32 overflow-hidden bg-cover md:pt-64 md:pb-44">
+  <article style="background-image: url('/images/aboutushero.png'); background-position:50% 0%;" class="aboutHero relative py-32 overflow-hidden bg-cover md:pt-64 md:pb-44">
 
 
     <section class="container about-max px-3 py-16 mx-auto text-white md:px-12">
