Update hero images and mobile nav

--- a/src/_includes/layouts/about.html
+++ b/src/_includes/layouts/about.html
@@ -23,7 +23,7 @@
     image: '/images/whyl3/whyl3-how.png'
   }
 ] %}
-{% set heroImage = '/images/aboutushero.png' %}
+{% set heroImage = '/images/whyl3hero.png' %}
 {% set faqGroups = [
   {
     title: 'Cost & Engagement',
